--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "now-build": "next build"
+    "start": "next start"
   }
 }
