--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "16.8.6"
   },
   "devDependencies": {
-    "@zeit/next-less": "^1.0.2-canary.2",
+    "@zeit/next-less": "1.0.2-canary.2",
     "antd": "3.16.5",
     "babel-plugin-import": "1.11.0",
     "babel-plugin-styled-components": "1.10.0",
@@ -38,6 +38,8 @@
   },
   "scripts": {
     "dev": "next",
-    "start": "next start -p 8080"
+    "build": "next build",
+    "start": "next start",
+    "now-build": "next build"
   }
 }
