--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "now-build": "next build"
   }
 }
