--- a/.kube/config
+++ b/.kube/config
@@ -8,10 +8,15 @@ contexts:
     cluster: api-ca-central-1-starter-openshift-online-com:6443
     user: brad@codeworks.sh/api-ca-central-1-starter-openshift-online-com:6443
   name: /api-ca-central-1-starter-openshift-online-com:6443/brad@codeworks.sh
-current-context: /api-ca-central-1-starter-openshift-online-com:6443/brad@codeworks.sh
+- context:
+    cluster: api-ca-central-1-starter-openshift-online-com:6443
+    namespace: dso
+    user: brad@codeworks.sh/api-ca-central-1-starter-openshift-online-com:6443
+  name: dso/api-ca-central-1-starter-openshift-online-com:6443/brad@codeworks.sh
+current-context: dso/api-ca-central-1-starter-openshift-online-com:6443/brad@codeworks.sh
 kind: Config
 preferences: {}
 users:
 - name: brad@codeworks.sh/api-ca-central-1-starter-openshift-online-com:6443
   user:
-    token: 3ROc-SUKUre_MZdZ6A_-IJ3uRphENrx1bXFKLn7yanU
+    token: NTPsbKgFPh-EQB4dQ-tXUONEQ0LXRj3Qw91Ko6awE5g
