--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vx/gradient": "0.0.189",
+    "@vx/group": "0.0.190",
+    "@vx/hierarchy": "0.0.190",
+    "@vx/mock-data": "0.0.189",
+    "@vx/scale": "0.0.190",
+    "@vx/shape": "0.0.190",
+    "d3-hierarchy": "^1.1.8",
+    "d3-shape": "^1.3.5",
     "http-status": "^1.3.2",
+    "isomorphic-unfetch": "^3.0.0",
+    "kubernetes-client": "^8.3.4",
     "next": "8.0.4",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "vx": "0.0.1"
   },
   "devDependencies": {
-    "@zeit/next-less": "1.0.2-canary.2",
+    "@zeit/next-less": "^1.0.2-canary.2",
     "antd": "3.16.5",
     "babel-plugin-import": "1.11.0",
     "babel-plugin-styled-components": "1.10.0",
