--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "8.0.4",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "vx": "0.0.1"
+    "vx": "0.0.1",
+    "@zeit/next-less": "^1.0.2-canary.2"
   },
   "devDependencies": {
     "@zeit/next-less": "^1.0.2-canary.2",
